build(gradle): add kotlin, dependencies and tasks